tests/compile-fail/graph_AB_BA.stderr
error[E0119]: conflicting implementations of trait `LockAfter<A>` for type `B`
 --> tests/compile-fail/graph_AB_BA.rs:7:1
  |
7 | impl_lock_order!(A => B);
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `B`
  |
  = note: this error originates in the macro `impl_lock_order` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `LockAfter<B>` for type `A`
 --> tests/compile-fail/graph_AB_BA.rs:8:1
  |
8 | impl_lock_order!(B => A);
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `A`
  |
  = note: this error originates in the macro `impl_lock_order` (in Nightly builds, run with -Z macro-backtrace for more info)
